# weather_query_web_app

./: .env.sample  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: health.py  history.py  weather.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  query_record.py  weather_detail.py
app/repositories/: query_repository.py
app/schemas/: health.py  weather.py
app/services/: cache_service.py  query_service.py  rate_limiter.py  weather_client.py
app/templates/: base.html  history.html  index.html  result.html
migrations/: env.py
migrations/versions/: ac5bdf66cfae_init.py
tests/: conftest.py  test_history_logic.py  test_query_service.py  test_rate_limit.py
