[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-query-web-app"
version = "0.1.0"
description = "Async FastAPI weather query app with PostgreSQL, Redis, Alembic, tests"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
  "fastapi~=0.136.1",
  "uvicorn[standard]~=0.34.2",
  "SQLAlchemy~=2.0.41",
  "asyncpg~=0.30.0",
  "alembic~=1.16.1",
  "httpx~=0.28.1",
  "redis~=6.1.0",
  "pydantic-settings~=2.9.1",
  "jinja2~=3.1.6",
  "python-multipart~=0.0.20",
  "tenacity~=9.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3.5",
  "pytest-asyncio~=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]